--- a/requirements.txt
+++ b/requirements.txt
@@ -1,276 +1,3 @@
-﻿absl-py==2.1.0
-aiohttp==3.9.3
-aiosignal==1.3.1
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astor==0.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.2.0
-autocorrect==2.6.1
-Babel==2.14.0
-beautifulsoup4==4.12.3
-binaryornot==0.4.4
-bleach==1.5.0
-blinker==1.7.0
-blis==0.7.11
-boto3==1.34.82
-botocore==1.34.82
-bump-my-version==0.18.1
-cachetools==5.3.3
-catalogue==2.0.10
-catboost==1.2.3
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-colorama==0.4.6
-comm==0.2.1
-confection==0.1.4
-contourpy==1.2.0
-cookiecutter==2.6.0
-cycler==0.12.1
-cymem==2.0.8
-dataclasses-json==0.6.4
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-dm-tree==0.1.8
-emoji==2.10.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-executing==2.0.1
-fastjsonschema==2.19.1
-filelock==3.13.1
-flatbuffers==24.3.7
-fonttools==4.48.1
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2024.2.0
-future==1.0.0
-gast==0.5.4
-gensim==3.8.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.1
-google-api-core==2.18.0
-google-api-python-client==2.125.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.5.0
-google-pasta==0.2.0
-googleapis-common-protos==1.63.0
-graphviz==0.20.1
-greenlet==3.0.3
-grpcio==1.62.1
-grpcio-status==1.62.1
-h11==0.14.0
-h5py==3.10.0
-html5lib==0.9999999
-httpcore==1.0.2
-httplib2==0.22.0
-httpx==0.26.0
-huggingface-hub==0.21.3
-idna==3.6
-imageio==2.34.0
-imbalanced-learn==0.12.0
-imblearn==0.0
-iniconfig==2.0.0
-install==1.3.5
-ipykernel==6.29.2
-ipython==8.21.0
-ipywidgets==8.1.2
-isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.3.2
-json5==0.9.14
-jsonpatch==1.33
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.2
-jupyter_client==8.6.0
-jupyter_core==5.7.1
-jupyter_server==2.12.5
-jupyter_server_terminals==0.5.2
-jupyterlab==4.1.1
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-jupyterlab_widgets==3.0.10
-keras==3.0.5
-key==0.4
-kiwisolver==1.4.5
-langchain==0.1.15
-langchain-community==0.0.32
-langchain-core==0.1.41
-langchain-text-splitters==0.0.1
-langcodes==3.3.0
-langsmith==0.1.45
-lazy_loader==0.3
-Levenshtein==0.25.0
-libclang==18.1.1
-lightgbm==4.3.0
-llvmlite==0.42.0
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.1
-matplotlib==3.8.3
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.3.2
-mpmath==1.3.0
-multidict==6.0.5
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-namex==0.0.7
-nbclient==0.9.0
-nbconvert==7.16.0
-nbformat==5.9.2
-neattext==0.1.3
-nest-asyncio==1.6.0
-networkx==3.2.1
 nltk==3.8.1
-notebook==7.1.0
-notebook_shim==0.2.3
-numba==0.59.1
-numpy==1.26.4
-openai==1.17.0
-opencv-python==4.9.0.80
-opt-einsum==3.3.0
-orjson==3.10.0
-overrides==7.7.0
-packaging==23.2
-pandas==2.2.0
-pandocfilters==1.5.1
-parso==0.8.3
-pillow==10.2.0
-pke @ git+https://github.com/boudinfl/pke.git@69871ffdb720b83df23684fea53ec8776fd87e63
-platformdirs==4.2.0
-plotly==5.19.0
-pluggy==1.4.0
-preshed==3.0.9
-prometheus-client==0.19.0
-prompt-toolkit==3.0.43
-proto-plus==1.23.0
-protobuf==4.25.3
-psutil==5.9.8
-pure-eval==0.2.2
-pyarrow==15.0.2
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.21
-pycryptodome==3.20.0
-pydantic==2.6.2
-pydantic-settings==2.2.1
-pydantic_core==2.16.3
-pydeck==0.8.1b0
-Pygments==2.17.2
-pyparsing==3.1.1
-pytest==8.1.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-slugify==8.0.4
-pytz==2024.1
-pywin32==306
-pywinpty==2.0.12
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-questionary==2.0.1
-rapidfuzz==3.6.1
-referencing==0.33.0
-regex==2023.12.25
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.0
-rich-click==1.7.3
-rpds-py==0.18.0
-rsa==4.9
-s3transfer==0.10.1
-safetensors==0.4.2
-scikit-image==0.22.0
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-seaborn==0.13.2
-secret==0.8
-Send2Trash==1.8.2
-sentence-splitter==1.4
-sentence-transformers==2.5.1
-sentencepiece==0.2.0
-setuptools==69.1.1
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.29
-srsly==2.4.8
-stack-data==0.6.3
-stopwords==1.0.1
-streamlit==1.33.0
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.16.2
-tensorboard-data-server==0.7.2
-tensorflow==2.16.1
-tensorflow-intel==2.16.1
-termcolor==2.4.0
-terminado==0.18.0
-text-unidecode==1.3
-textblob==0.18.0.post0
-thinc==8.2.3
-threadpoolctl==3.3.0
-tifffile==2024.2.12
-tinycss2==1.2.1
-tokenizers==0.15.2
-toml==0.10.2
-tomlkit==0.12.3
-toolz==0.12.1
-torch==2.2.1
-tornado==6.4
-tqdm==4.66.2
-traitlets==5.14.1
-transformers==4.38.2
-typer==0.9.0
-types-python-dateutil==2.8.19.20240106
-typing-inspect==0.9.0
-typing_extensions==4.9.0
-tzdata==2024.1
-Unidecode==1.3.8
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==2.2.1
-wasabi==1.1.2
-watchdog==4.0.0
-wcwidth==0.2.13
-weasel==0.3.4
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-Werkzeug==3.0.1
-wheel==0.42.0
-widgetsnbextension==4.0.10
-wrapt==1.16.0
-xgboost==2.0.3
-yarl==1.9.4
+streamlit==1.35.0
+pickle4==0.0.1
